--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "cp -R build/ docs/"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
